# renderer

./: CMakeLists.txt  README.md  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  texture.cpp  texture.h  tgaimage.cpp  tgaimage.h
